# LeaseReviewDemo

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCT_SPEC.md  README.md  pyproject.toml  run_cli.py
data/reference/: Template1.docx  Template2.docx
src/lease_review_tool/: __init__.py  api.py  cli.py  config.py  contracts.py  db.py  document_processing.py  llm.py  models.py  preflight.py  progress.py  schemas.py  utils.py
src/lease_review_tool/pipeline/: __init__.py  analysis.py  ingestion.py
